Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-59891

When moving window while a select dropdown is open in WebEngineView, the dropdown menu does not follow the window

XMLWordPrintable

    • macOS, Windows
    • c56169f7a1bcbe45f3c89a78b8a5a4606666db83

      When opening a select dropdown and then moving the window, the dropdown portion stays in it's original position and it does not follow the window.

      Steps to reproduce:

      • Run attached sample
      • Open the select component
      • Move the window
      • EXPECTED: The select component's dropdown popup follows the window
      • ACTUAL: Dropdown popup stays in it's original position, even outside the main window

      Sample URL: https://www.w3schools.com/tags/tryit.asp?filename=tryhtml_select

        1. qtbug59891.png
          qtbug59891.png
          5 kB
        2. qtbug59891.zip
          0.7 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            alexandru.croitor Alexandru Croitor
            jussi_witick Jussi Witick
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes