src/webenginewidgets/render_widget_host_view_qt_delegate_widget.h
@@ -83,6 +83,7 @@ protected:
     void resizeEvent(QResizeEvent *resizeEvent) override;
     void showEvent(QShowEvent *) override;
     void hideEvent(QHideEvent *) override;
+    void closeEvent(QCloseEvent *event) override;
 
     QVariant inputMethodQuery(Qt::InputMethodQuery query) const override;
 
